codex-rs/tui/src/snapshots/codex_tui__oss_selection__presentation_tests__oss_providers_mixed_short.snap
---
source: tui/src/oss_selection_tests.rs
assertion_line: 50
expression: terminal.backend()
---
┌──────────────────────────┐
│  Select an open-source   │
│  provider                │
│                          │
│  1. LM Studio · ○ Not    │
│     running              │
│› 2. Ollama · ● Running   │
│                          │
│  ↑/↓ choose · enter      │
│  select · esc LM Studio  │
│  · ctrl+c exit           │
└──────────────────────────┘
